upload file in GCS
