# src/main/java/com/ecom/blogApi/api/model/BlogCategory.java
@@ -1,6 +1,7 @@
 package com.ecom.blogApi.api.model;
 
 import java.util.Objects;
+import com.ecom.blogApi.api.model.BlogCategoryImage;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.annotations.ApiModel;
@@ -12,7 +13,7 @@ import javax.validation.constraints.*;
 /**
  * BlogCategory
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-27T15:29:15.714023765+05:30[Asia/Kolkata]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-04-13T13:14:56.410513400+05:30[Asia/Calcutta]")
 
 public class BlogCategory   {
   @JsonProperty("blogcategoryId")
@@ -29,6 +30,9 @@ public class BlogCategory   {
 
   @JsonProperty("Status")
   private String status;
+
+  @JsonProperty("categoryImage")
+  private BlogCategoryImage categoryImage;
 
   public BlogCategory blogcategoryId(Integer blogcategoryId) {
     this.blogcategoryId = blogcategoryId;
@@ -134,6 +138,27 @@ public class BlogCategory   {
     this.status = status;
   }
 
+  public BlogCategory categoryImage(BlogCategoryImage categoryImage) {
+    this.categoryImage = categoryImage;
+    return this;
+  }
+
+  /**
+   * Get categoryImage
+   * @return categoryImage
+  */
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public BlogCategoryImage getCategoryImage() {
+    return categoryImage;
+  }
+
+  public void setCategoryImage(BlogCategoryImage categoryImage) {
+    this.categoryImage = categoryImage;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -148,12 +173,13 @@ public class BlogCategory   {
         Objects.equals(this.blogCategoryName, blogCategory.blogCategoryName) &&
         Objects.equals(this.seoTitle, blogCategory.seoTitle) &&
         Objects.equals(this.seoMetaDescription, blogCategory.seoMetaDescription) &&
-        Objects.equals(this.status, blogCategory.status);
+        Objects.equals(this.status, blogCategory.status) &&
+        Objects.equals(this.categoryImage, blogCategory.categoryImage);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(blogcategoryId, blogCategoryName, seoTitle, seoMetaDescription, status);
+    return Objects.hash(blogcategoryId, blogCategoryName, seoTitle, seoMetaDescription, status, categoryImage);
   }
 
   @Override
@@ -166,6 +192,7 @@ public class BlogCategory   {
     sb.append("    seoTitle: ").append(toIndentedString(seoTitle)).append("\n");
     sb.append("    seoMetaDescription: ").append(toIndentedString(seoMetaDescription)).append("\n");
     sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    categoryImage: ").append(toIndentedString(categoryImage)).append("\n");
     sb.append("}");
     return sb.toString();
   }
