# src/main/java/com/ecom/blogApi/controller/BlogCategoryController.java
@@ -5,6 +5,7 @@ import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -12,10 +13,14 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.client.ResponseErrorHandler;
+import org.springframework.web.multipart.MultipartFile;
 
 import com.ecom.blogApi.api.model.BlogCategory;
+import com.ecom.blogApi.api.model.BlogCategoryImage;
 import com.ecom.blogApi.service.BlogCategoryService;
 
 @RestController
@@ -25,11 +30,11 @@ public class BlogCategoryController {
 	@Autowired
 	BlogCategoryService blogCategoryService;
 	
-	@PostMapping(value="/blogcategoryvalue" , consumes = "application/json" , produces = "application/json")
-	ResponseEntity<Object> postBlogCategory (@RequestBody BlogCategory blogCategory){
+	@PostMapping(value="/blogcategoryvalue")
+	ResponseEntity<Object> postBlogCategory (@RequestParam("categoryName") String categoryName ,@RequestParam("seoTitle") String seoTitle ,@RequestParam("seoMetaDesc") String seoMeta,@RequestParam("imgData") MultipartFile imgData){
 		try {
 		
-			BlogCategory blgCategory = blogCategoryService.createBlogCategory(blogCategory);
+			BlogCategory blgCategory = blogCategoryService.createBlogCategory(categoryName , seoTitle , seoMeta ,imgData);
 			
 			return  ResponseHandler.generateResponseBlogCategory("Sucessfully added data",HttpStatus.CREATED,blgCategory);
 			
@@ -40,14 +45,15 @@ public class BlogCategoryController {
 		
 	}
 	
-	@GetMapping(value="/blogcategory")
+	@CrossOrigin
+	@RequestMapping(value="/blogcategory" , method = RequestMethod.GET)
 	ResponseEntity<Object> getAllBlogCategory (){
 		try {
-			List<BlogCategory> abc = blogCategoryService.getallBlogCategory();
-			return new ResponseEntity<>(abc ,HttpStatus.OK);
+			List<BlogCategory> blogCategory = blogCategoryService.getAllBlogCategory();
+			return new ResponseEntity<>(blogCategory ,HttpStatus.OK);
 			
-		}catch(Exception d) {
-			return ResponseHandler.generateResponseBlogCategory(d.getMessage(), HttpStatus.NOT_FOUND, null);
+		}catch(Exception ex) {
+			return ResponseHandler.generateResponseBlogCategory(ex.getMessage(), HttpStatus.NOT_FOUND, null);
 		}
 		
 		
@@ -66,6 +72,16 @@ public class BlogCategoryController {
 		}
 		
 	}
+	
+//	@GetMapping(value="/categoryimagebyid/{imageId}")
+//	ResponseEntity<Object> getImageDetailsById(@PathVariable int imageId){
+//		try {
+//			BlogCategoryImage blgImageDetails = blogCategoryService.getAllImageDetails(imageId);
+//		return new ResponseEntity<>(blgImageDetails , HttpStatus.OK);
+//		}catch(Exception ex) {
+//			return ResponseHandler.generateResponseBlogCategoryImage(ex.getMessage(), HttpStatus.NOT_FOUND, null);
+//		}
+//	}
 	
 	@PutMapping(value = "/updateblogcategory/{blogcategoryid}" , consumes = "application/json" , produces = "application/json" )
 	ResponseEntity<Object> putBlogCategory(@PathVariable("blogcategoryid") int id,@RequestBody BlogCategory blogCategory){
